--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
     <div class="container">
         <h1>Tournament Audit Reports</h1>
-        <p class="subtitle">Generated: 2026-01-17 21:46:01 | 12 reports</p>
+        <p class="subtitle">Generated: 2026-01-17 22:22:52 | 12 reports</p>
 
         <table>
             <thead>
@@ -187,7 +187,7 @@
         </table>
 
         <footer>
-            <p>Susguam Tournament Audit System</p>
+            <p>TWT Audit System</p>
         </footer>
     </div>
 </body>
