--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
     <div class="container">
         <h1>Tournament Audit Reports</h1>
-        <p class="subtitle">Generated: 2026-01-18 03:48:09 | 355 reports</p>
+        <p class="subtitle">Generated: 2026-01-23 23:25:29 | 356 reports</p>
 
         <div class="nav-links">
             <a href="leaderboard.html">View TrueGamerRatingPointz(tm) Leaderboard &rarr;</a>
@@ -109,6 +109,14 @@
             </thead>
             <tbody>
                 
+        <tr>
+            <td><a href="report_let-s-make-waves-tekken-8_Tekken_8.html">Let's Make Waves</a></td>
+            <td>Tekken 8</td>
+            <td>2026-01-17</td>
+            <td>25</td>
+            <td>4.0%</td>
+        </tr>
+        
         <tr>
             <td><a href="report_hambats-mighty-monthly-january-2026_TEKKEN_8_-_1v1.html">Hambats Mighty Monthly - Ja...</a></td>
             <td>TEKKEN 8 - 1v1</td>
